// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Dashboard tests should correctly render page when user is not verified 1`] = `
<Page
  empty={Object {}}
  title="Dashboard"
>
  <EmailBanner
    handleResend={[Function]}
    sendingStatus={null}
  />
  <Connect(UsageReport) />
  <Tutorial
    account={
      Object {
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInWeeks={0}
    checkSuppression={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    currentUser={
      Object {
        "email_verfied": false,
      }
    }
    hasSuppressions={true}
    listApiKeys={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "id": 0,
            },
          ],
        ],
      }
    }
    listSendingDomains={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
  />
</Page>
`;

exports[`Page: Dashboard tests should display upgrade CTA when account is free and active 1`] = `
<Page
  empty={Object {}}
  title="Dashboard"
>
  <Connect(UsageReport) />
  <Tutorial
    account={
      Object {
        "status": "active",
        "subscription": Object {
          "code": "free",
        },
      }
    }
    accountAgeInWeeks={0}
    checkSuppression={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    currentUser={
      Object {
        "email_verified": true,
      }
    }
    hasSuppressions={true}
    listApiKeys={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "id": 0,
            },
          ],
        ],
      }
    }
    listSendingDomains={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
  />
</Page>
`;

exports[`Page: Dashboard tests should render import suppression list when 0 suppressions and new account 1`] = `
<Page
  empty={Object {}}
  title="Dashboard"
>
  <Connect(UsageReport) />
  <Banner
    status="default"
    title="Coming from another email service?"
  >
    <p>
      Welcome! Make sure you import your suppression list from your previous provider to avoid sending to people who have previously opted out, consistently bounced, etc. Learn more about migrating from Mailgun, Mandrill, or SendGrid. 
      <a
        href="https://www.sparkpost.com/docs/getting-started/getting-started-sparkpost/#important-coming-from-other-email-services"
        rel="noopener noreferrer"
        target="_blank"
      >
        Import your suppressions
      </a>
      .
    </p>
  </Banner>
  <Tutorial
    account={
      Object {
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInWeeks={40}
    checkSuppression={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    currentUser={
      Object {
        "email_verified": true,
      }
    }
    hasSuppressions={false}
    listApiKeys={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "id": 0,
            },
          ],
        ],
      }
    }
    listSendingDomains={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
  />
</Page>
`;

exports[`Page: Dashboard tests should render page correctly with defaults 1`] = `
<Page
  empty={Object {}}
  title="Dashboard"
>
  <Connect(UsageReport) />
  <Tutorial
    account={
      Object {
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInWeeks={0}
    checkSuppression={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    currentUser={
      Object {
        "email_verified": true,
      }
    }
    hasSuppressions={true}
    listApiKeys={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "id": 0,
            },
          ],
        ],
      }
    }
    listSendingDomains={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
  />
</Page>
`;
